<resources>
    <string name="app_name">Gorodki Referee</string>

    <string name="options_settings">Settings</string>
    <string name="scan">Scan new qr-code</string>
    <string name="competition_list">Competitions</string>
    <string name="performance_list">Performances</string>
    <string name="role_selection">Role selection</string>
    <string name="secretary_fragment">Gorodki secretary</string>
    <string name="qr_code">qr_code</string>

    <string name="cancelled">Cancelled</string>
    <string name="hint_grade">Select a grade</string>
    <string name="hint_category">Select a category</string>
    <string name="hint_region">Select a region</string>
    <string name="save">Save</string>
    <string name="standards">" "</string>
    <string name="strength">" "</string>
    <string name="timeliness">" "</string>
    <string name="distance">" "</string>
    <string name="control">" "</string>
    <string name="fill">Fill in the rest of the fields</string>
    <string name="intensity">" "</string>
    <string name="variety">" "</string>
    <string name="rationality">" "</string>
    <string name="logic">" "</string>
    <string name="coordination">" "</string>
    <string name="original">" "</string>
    <string name="angle">" "</string>
    <string name="effect">" "</string>
    <string name="organicity">" "</string>
    <string name="plastic">" "</string>
    <string name="gradeU1">1st junior</string>
    <string name="gradeU2">2st junior</string>
    <string name="gradeU3">3st junior</string>
    <string name="grade1">1st</string>
    <string name="grade2">2st</string>
    <string name="grade3">3st</string>
    <string name="gradeKMS">KMS</string>
    <string name="gradeMS">MS</string>
    <string name="gradeZMS">HMS</string>
    <string name="protocol">Protocol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintNamePlayer">Player name</string>
    <string name="ostalos">Осталось:</string>
    <string name="droped">Бросил:</string>
    <string name="class15">Gorodki Сlassic 15</string>
    <string name="class10">Gorodki Сlassic 10</string>
    <string name="class10hard">Gorodki Сlassic 10 hard</string>
    <string name="evrop15">Gorodki European 15</string>

    <string name="figurs">Фигура:</string>
    <string name="broski">Броски:</string>
    <string name="completed">завершить</string>
    <string name="unnext">предыдущая</string>
    <string name="x">X</string>
    <string name="galochka">✓</string>
    <string name="next">следующая</string>
    <string name="result">Результат:</string>
    <string name="game_2">Партия 2:</string>
    <string name="game_1">Партия 1:</string>
    <string name="range">Разряд:</string>
    <string name="summ">Сумма</string>
    <string name="turn_on_flashlight">включить фонарик</string>
    <string name="turn_off_flashlight">выключить фонарик</string>
    <string name="open_galery">Открыть галерею</string>


</resources>